--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -16,7 +16,7 @@ const navItems: Array<NavItem> = [
 >
   <a class="flex items-center gap-3 hover:!text-default" href="#">
     <h1 class="font-bold gradient-text ">Nanaisoft</h1>
-    <Icon name="line-md:moon-loop" class="size-9 mb-3" />
+    <Icon name="line-md:moon-loop" class="size-8 mb-2 transform duration-300" />
     <!-- <Icon name="wordmark" class="hidden h-4 sm:block" /> -->
   </a>
   <div>
