add icons nad fix links

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -44,6 +44,7 @@ const features: Array<FeatureItem> = [
 ---
 
 <ContentSection title="Features" id="features">
+  <Icon slot="eyebrow" name="line-md:compass-loop" class="size-32" />
   <Fragment slot="lead">
     Lorem ipsum comes <span class="text-primary">batteries included</span>. It takes
     the best parts of
