--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -4,8 +4,9 @@ import ContentSection from "~/components/content-section.astro";
 ---
 
 <ContentSection title="Lorem ipsum" id="intro">
-  <Icon slot="eyebrow" name="logomark" class="size-32" />
-  <Fragment slot="lead">
+<!--   <Icon slot="eyebrow" name="logomark" class="size-32" />
+ -->   <Icon slot="eyebrow" name="line-md:speedometer-loop" class="size-32" />
+       <Fragment slot="lead">
     Lorem impsum dolor sit amet
     <span class="text-primary">modern</span> web.
     <span class="text-primary">Lightning-fast</span>
