--- a/src/components/compatibility.astro
+++ b/src/components/compatibility.astro
@@ -2,6 +2,7 @@
 import CompatibilityList from "~/components/compatibility-list.astro";
 import ContentSection from "~/components/content-section.astro";
 import type { CompatibilityItem } from "~/types";
+import { Icon } from "astro-icon/components";
 
 const frameworks: Array<CompatibilityItem> = [
   {
@@ -71,6 +72,8 @@ const platforms: Array<CompatibilityItem> = [
 ---
 
 <ContentSection title="Compatibility" id="compatibility">
+  <Icon slot="eyebrow" name="line-md:cloud-braces-loop" class="size-32" />
+  <Fragment slot="lead"></Fragment>
   <Fragment slot="lead">
     Nanaisoft <span class="text-primary">plays nice</span>. Bring your own UI{" "}
     <span class="text-primary">framework</span>
@@ -79,11 +82,11 @@ const platforms: Array<CompatibilityItem> = [
   <CompatibilityList
     items={frameworks}
     title="Frameworks"
-    url="https://docs.astro.build/core-concepts/framework-components/"
+    url="#"
   />
   <CompatibilityList
     items={platforms}
     title="Platforms"
-    url="https://docs.astro.build/guides/deploy/"
+    url="#"
   />
 </ContentSection>
