--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import ContentSection from "~/components/content-section.astro";
 import ShowcaseCard from "~/components/showcase-card.astro";
-
+import { Icon } from "astro-icon/components";
 const featuredSites = await getCollection(
   "showcase",
   ({ data }) => "featured" in data,
@@ -13,6 +13,7 @@ const orderedSites = featuredSites.sort(
 ---
 
 <ContentSection title="Showcase" id="showcase">
+  <Icon slot="eyebrow" name="line-md:coffee-twotone-loop" class="size-32" />
   <Fragment slot="lead">
     Nanaisoft is <span class="text-primary">versatile</span>.{" "}
     <span class="text-primary">Explore</span> what's possible and get{" "}
